<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sender Block</string>
    <string name="action_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="version">Version 0.1-2 (beta)</string>
    <string name="copyright">Copyright 2013 Sudaraka Wijesinghe.</string>
    <string name="url_contact">http://sudaraka.org/contact</string>
    <string name="url_source">http://git.sudaraka.org/android-apps/sender-block/</string>
    <string name="source_available">Source code available under GPLv3 on:</string>

</resources>
