<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    android:orientation="vertical" >

    <TabHost
        android:id="@+id/about_tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal|fill_horizontal" >

            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/copyright"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

				    <TextView
				        android:id="@+id/textView1"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_marginTop="5dp"
				        android:gravity="center"
				        android:text="@string/app_name"
				        android:textSize="26sp"
				        android:textStyle="bold" />
				
				    <TextView
				        android:id="@+id/textView2"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_marginBottom="5dp"
				        android:gravity="center"
				        android:text="@string/version"
				        android:textSize="14sp" />
				
				    <TextView
				        android:id="@+id/textView3"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:gravity="center"
				        android:text="@string/copyright"
				        android:textSize="18sp"
				        android:textStyle="italic" />
				
				    <TextView
				        android:id="@+id/textView4"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:autoLink="web"
				        android:gravity="center"
				        android:text="@string/url_contact"
				        android:textSize="13sp" />
				
				    <TextView
				        android:id="@+id/textView5"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_marginTop="15dp"
				        android:gravity="center"
				        android:text="@string/source_available"
				        android:textSize="16sp" />
				
				    <TextView
				        android:id="@+id/textView6"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_marginTop="5dp"
				        android:autoLink="web"
				        android:gravity="center"
				        android:scrollbarStyle="insideOverlay"
				        android:scrollbars="vertical"
				        android:text="@string/url_source"
				        android:textSize="13sp" />
			
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/license"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
				    
				    <TextView
				        android:id="@+id/gpl_text"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:layout_marginLeft="10dp"
				        android:layout_marginRight="10dp"
				        android:layout_marginTop="30dp"
				        android:maxLines="675"
				        android:scrollHorizontally="true" />
				    
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>
